completes API documentation
